k8s/base/04-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gelato-web
  namespace: gelato
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gelato-web
  template:
    metadata:
      labels:
        app: gelato-web
    spec:
      containers:
        - name: web
          image: ghcr.io/94manuel/gelato-web:main
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gelato-web
  namespace: gelato
spec:
  selector:
    app: gelato-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
